--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM manipulation WITH form </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://www.vhv.rs/dpng/d/145-1455068_application-form-icon-png-transparent-png.png" type="image/x-icon">
 </head>
 <body>
     <h1 id="title">DOM MANIPULATION WITH FORM</h1>
